@@ -86,17 +86,22 @@ name, date, heure, gamestate, position, name perso, name server, versions
 - XIdent AddAccount dialog and other buttons
 - Modify the connection system
 
-**** TODO Cross compilation to win32                                  [50%]
+**** TODO Cross compilation to win32                                  [57%]
+     :CLOCK:
+     CLOCK: [2010-10-25 lun 13:53]--[2010-10-25 lun 14:21] =>  0:28
+     CLOCK: [2010-10-25 lun 09:44]--[2010-10-25 lun 09:59] =>  0:15
      CLOCK: [2010-02-13 sam 11:07]--[2010-02-13 sam 11:45] =>  0:38
-- [ ] GlobalURI + loadRessources for Win32.
-- [ ] remove config file 'ogre.cfg'.
-- [ ] Should build with debugging symbols      
+     :END:
 - [X] Test created executable (164Mo)
       Unhandled page fault
 - [X] Trying cross-compilation : Works
       Get a 'undefined reference to `_libintl_gettext'' error
       Fixed in acinclude.m4
 - [X] Cross-compil documentation must reference mingw.sh
+- [X] Should fix the 'cannot find -lboost_serialization' error
+- [ ] GlobalURI + loadRessources for Win32.
+- [ ] remove config file 'ogre.cfg'.
+- [ ] Should build with debugging symbols      
 **** TODO Coding standards
 - [ ] Should split the common/ library in commnon/ and net/
 - [ ] May headers files be called *.hpp
